--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="A propos de moi">
     <meta name="keywords" content="web,developer,resume">
     <meta name="author" content="Khalid TOUNOUSSI">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--[if lt IE 9]> 
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
     <![endif]-->
@@ -21,10 +20,12 @@
     <div id="wrapper">
         <header>
             <h1 class="nom"> Khalid TOUNOUSSI</h1>
-            <h2 class="activite"> Fullstack Engineer</h2>
+            <h2 class="nom activite"> Fullstack Engineer</h2>
             <div class="photo">
                 <img src="img/profile.jpg" alt="profile">
             </div>
+        </header>
+        <section>
             <div class="contact">
                 <h2> informations de contact</h2>
                 <div class="contact-flex">
@@ -44,7 +45,7 @@
                     <p> Marocaine</p>
                 </div>
             </div>
-        </header>
+        </section>
 
         <!-- Section Expériences professionnelles-->
         <section>
@@ -112,11 +113,23 @@
             <h2> Formation</h2>
             <article class="exp">
                 <div class="exp-logo">
+                    <a href="#"> <img src="img/ubo.png" alt="Logo de ENsam"></a>
+                </div>
+                <div class="exp-info">
+                    <h3> Universit" de Bretagne Occidentale (UBO)</h3>
+                    <h4>2022-En cours</h4>
+                </div>
+                <div class="exp-desc">
+                    <p> M2 en développement Logiciel des Systèmes d'Information</p>
+                </div>
+            </article>
+            <article class="exp">
+                <div class="exp-logo">
                     <a href="#"> <img src="img/ensam.jfif" alt="Logo de ENsam"></a>
                 </div>
                 <div class="exp-info">
                     <h3> Ecole Nationale Supérieure d'Arts et Métiers de Rabat(ENSAMR)</h3>
-                    <h4>2020-2023</h4>
+                    <h4>2020-En cours</h4>
                 </div>
                 <div class="exp-desc">
                     <p> Diplôme d'ingénieur en Intelligence Artificielle et Data Science
@@ -163,7 +176,7 @@
                 <div class="conteneur-barre"> <span class="barre c95"></span></div>
             </div>
             <div class="comp">
-                <p> JavaScript</p>
+                <p> Dart</p>
                 <div class="conteneur-barre"> <span class="barre c95"></span></div>
             </div>
             <h3 class="h3gauche">Personnelles</h3>
