--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <header itemscope itemtype="http://schema.org/Person">
+    <div id="wrapper" itemscope itemtype="http://schema.org/Person">
+        <header>
             <h1 itemprop="fullName" class="nom"> Khalid TOUNOUSSI</h1>
             <h2 itemprop="activity" class="nom activite"> Fullstack Engineer</h2>
             <div class="photo">
